--- a/turn-images-into-unicode.html
+++ b/turn-images-into-unicode.html
@@ -71,12 +71,16 @@
                             <div class="content-grid" id="contentGrid">
                                 <div class="content-pane" id="imagePane">
                                     <img id="imagePreview" class="image-preview" alt="Image preview"/>
+                                    <div class="image-info" id="imageInfo" style="display: none;">
+                                        <span id="aspectRatioDisplay"></span>
+                                    </div>
                                 </div>
                                 <div class="content-pane" id="unicodePane">
                                     <div class="output-header">
                                         <h4 class="output-title">Unicode Output</h4>
                                         <button id="downloadBtn" class="action-btn small">Download Text</button>
                                     </div>
+                                    <div class="output-info" id="outputInfo"></div>
                                     <pre id="unicodeOutput" class="unicode-output"></pre>
                                 </div>
                             </div>
