--- a/test-navigation.html
+++ b/test-navigation.html
@@ -17,6 +17,7 @@
         .success { color: green; }
         .error { color: red; }
     </style>
+    <script>(function(){var h=location.hostname;var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
 </head>
 <body>
     <h1>Navigation Link Test</h1>
