--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script>(function(){var h=location.hostname;var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
 </head>
 <body>
     <header class="header">
@@ -25,7 +26,7 @@
                         <circle cx="8" cy="9" r="1.5" fill="currentColor"/>
                     </svg>
                 </div>
-                <h1 class="title">CusImage - AI Image Tools</h1>
+                <h1 class="title">CusImage</h1>
                 <p class="subtitle">Advanced Image Describer, AI Cutout & Unicode Converter Solutions</p>
             </div>
             <div class="nav-dropdown">
