--- a/ai-cutout.html
+++ b/ai-cutout.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="canonical" href="https://www.cusimage.com/ai-cutout">
     <link rel="stylesheet" href="cutout.css">
     <script src="favicon.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
