--- a/image-describer.html
+++ b/image-describer.html
@@ -6,26 +6,27 @@
     <meta name="description" content="Free AI Image Describer that generates accurate image descriptions, SEO-friendly alt text, and captions. Perfect for accessibility, content teams, and SEO optimization.">
     <meta name="keywords" content="image describer, AI image describer, image description generator, automatic alt text, image captioning, computer vision description, image analysis tool, free image describer">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="http://localhost:3000/image-describer">
+    <link rel="canonical" href="https://www.cusimage.com/image-describer">
     <title>AI Image Describer – Free Automatic Alt Text & Description Tool | CusImage</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="cutout.css">
     <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <link rel="icon" type="image/png" href="/logo.png">
     <script src="favicon.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="alternate" hreflang="en" href="http://localhost:3000/image-describer">
+    <link rel="alternate" hreflang="en" href="https://www.cusimage.com/image-describer">
     <meta property="og:title" content="AI Image Describer – Free Automatic Alt Text & Description Tool">
     <meta property="og:description" content="Generate natural, SEO-friendly image descriptions and alt text automatically. Perfect for accessibility and content workflows.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://localhost:3000/image-describer">
-    <meta property="og:image" content="/favicon.svg?v=2">
+    <meta property="og:url" content="https://www.cusimage.com/image-describer">
+    <meta property="og:image" content="https://www.cusimage.com/logo.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="AI Image Describer – Free Automatic Alt Text & Description Tool">
     <meta name="twitter:description" content="Automatically create accurate image descriptions and alt text for accessibility and SEO.">
-    <meta name="twitter:image" content="/favicon.svg?v=2">
+    <meta name="twitter:image" content="https://www.cusimage.com/logo.png">
     <style>
       .describer-description { font-size: 16px; line-height: 1.6; color: var(--gray-800); }
       .results-actions .btn { margin-left: 8px; }
@@ -36,7 +37,7 @@
       "@context": "https://schema.org",
       "@type": "WebPage",
       "name": "AI Image Describer",
-      "url": "http://localhost:3000/image-describer",
+      "url": "https://www.cusimage.com/image-describer",
       "description": "Free AI image describer that generates accurate image descriptions, alt text, and captions for accessibility and SEO.",
       "inLanguage": "en",
       "mainEntity": {
