参考 Image Describer 完成 Unicode 与 Cutout 页面 SEO 优化；更新导航与站点资源

--- a/ai-cutout.html
+++ b/ai-cutout.html
@@ -9,14 +9,12 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
-    <link rel="icon" type="image/png" href="/logo.png">
-    <link rel="canonical" href="https://www.cusimage.com/ai-cutout">
     <link rel="stylesheet" href="cutout.css">
     <script src="favicon.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script>(function(){var h=location.hostname;var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
     <header class="header">
@@ -40,6 +38,7 @@
                         <li><a href="/image-describer" class="nav-link">Image Describer</a></li>
                         <li><a href="/ai-cutout" class="nav-link active">AI Cutout</a></li>
                         <li><a href="/turn-images-into-unicode" class="nav-link">Turn Images into Unicode</a></li>
+                        <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
                     </ul>
                 </nav>
             </div>
