--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <li><a href="/image-describer" class="nav-link">Image Describer</a></li>
                         <li><a href="/ai-cutout" class="nav-link">AI Cutout</a></li>
                         <li><a href="/turn-images-into-unicode" class="nav-link">Turn Images into Unicode</a></li>
+                        <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
                     </ul>
                 </nav>
             </div>
@@ -90,6 +91,19 @@
                     </div>
                     <h3 class="card-title">Turn Images into Unicode</h3>
                     <p class="card-description">Convert images into Unicode art compatible with terminals and web</p>
+                    <span class="card-cta">Get Started →</span>
+                </a>
+
+                <a href="/images-for-fb-cover" class="feature-card">
+                    <div class="card-icon">
+                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
+                            <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5"/>
+                            <path d="M5 16h14" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                            <path d="M7 12l3-3 3 3 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                        </svg>
+                    </div>
+                    <h3 class="card-title">Fb Covers</h3>
+                    <p class="card-description">Images for FB cover pulled from Feishu Bitable and shown in a responsive gallery</p>
                     <span class="card-cta">Get Started →</span>
                 </a>
             </div>
