--- a/turn-images-into-unicode.html
+++ b/turn-images-into-unicode.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Turn images into unicode with our free online converter. Transform any picture into beautiful ASCII art and unicode text characters for terminal displays, social media, and creative projects.">
     <meta name="keywords" content="turn images into unicode, image to unicode converter, ASCII art generator, text art converter, image to text, unicode art, ASCII art creator, free image to unicode">
+    <meta name="robots" content="index, follow">
     <title>Turn Images into Unicode - Free Online Converter & ASCII Art Generator | CusImage</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
@@ -16,7 +17,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="alternate" hreflang="en" href="https://www.cusimage.com/turn-images-into-unicode">
+    <meta property="og:title" content="Turn Images into Unicode – Free Converter & ASCII Art Generator">
+    <meta property="og:description" content="Convert any image into Unicode art and ASCII characters. Perfect for terminals, social posts, and creative projects.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.cusimage.com/turn-images-into-unicode">
+    <meta property="og:image" content="https://www.cusimage.com/logo.png">
+    <meta property="og:locale" content="en_US">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Turn Images into Unicode – Free Converter & ASCII Art Generator">
+    <meta name="twitter:description" content="Convert any image into Unicode art and ASCII characters. Perfect for terminals, social posts, and creative projects.">
+    <meta name="twitter:image" content="https://www.cusimage.com/logo.png">
     <script>(function(){var h=location.hostname;var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"WebPage","name":"Turn Images into Unicode","url":"https://www.cusimage.com/turn-images-into-unicode","description":"Free online converter to turn images into Unicode art and ASCII text characters.","inLanguage":"en"}
+    </script>
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"SoftwareApplication","name":"Turn Images into Unicode Converter","applicationCategory":"MultimediaApplication","operatingSystem":"Web Browser","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}
+    </script>
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"FAQPage","mainEntity":[
+      {"@type":"Question","name":"What is a Unicode converter?","acceptedAnswer":{"@type":"Answer","text":"A Unicode converter transforms images into text-based art using Unicode or ASCII characters."}},
+      {"@type":"Question","name":"Is this converter free?","acceptedAnswer":{"@type":"Answer","text":"Yes. This Unicode converter is free and runs in your browser."}},
+      {"@type":"Question","name":"What output formats are supported?","acceptedAnswer":{"@type":"Answer","text":"You can copy plain text output and download it as a .txt file."}}
+    ]}
+    </script>
 </head>
 <body>
     <header class="header">
