修复大量404：移除对 /logo.png 的引用，改用现有 favicon；JSON-LD 指向可用资源

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
-    <link rel="icon" type="image/png" href="/logo.png">
     <script src="favicon.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>(function(){var h=location.hostname;var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"CusImage","url":"https://www.cusimage.com","logo":"https://www.cusimage.com/logo.png"}</script>
+    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"CusImage","url":"https://www.cusimage.com","logo":"https://www.cusimage.com/favicon.svg?v=2"}</script>
 </head>
 <body>
     <header class="header">
