优化FAQ/SEO文案布局：新增faq-card样式并应用到Unicode与Cutout页面

--- a/ai-cutout.html
+++ b/ai-cutout.html
@@ -39,6 +39,8 @@
                         <li><a href="/ai-cutout" class="nav-link active">AI Cutout</a></li>
                         <li><a href="/turn-images-into-unicode" class="nav-link">Turn Images into Unicode</a></li>
                         <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
+                        <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
+                        <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
                     </ul>
                 </nav>
             </div>
@@ -131,6 +133,61 @@
             </div>
         </div>
     </main>
+
+    <section class="faq">
+        <div class="container">
+            <h2>AI Cutout FAQ</h2>
+            <div class="faq-intro">
+                <h1 class="tool-h1">AI Cutout Tool</h1>
+
+                <div class="content-grid">
+                    <div class="faq-card">
+                        <div class="copy-wrap">
+                            <div class="copy-col">
+                                <div class="copy-text">
+                                    <p>Our advanced <strong>AI cutout</strong> automatically removes image backgrounds with precise edge detection and segmentation. Ideal for product photography, social media content, and quick visual edits.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="faq-card">
+                        <div class="feature-block">
+                            <h2>Why Choose This AI Cutout?</h2>
+                            <ul>
+                                <li>Free, browser-based background removal</li>
+                                <li>Precise edge detection and hair detail handling</li>
+                                <li>Privacy-friendly, runs fully in your browser</li>
+                                <li>Supports common formats (JPG, PNG, WebP)</li>
+                                <li>Fast and reliable results</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="faq-card">
+                        <div class="faq-item">
+                            <h3>What is AI cutout?</h3>
+                            <p>AI cutout automatically removes backgrounds using modern segmentation and edge detection models.</p>
+                        </div>
+                    </div>
+                    <div class="faq-card">
+                        <div class="faq-item">
+                            <h3>Is the cutout tool free?</h3>
+                            <p>Yes. The tool is free and processes images directly in your browser.</p>
+                        </div>
+                    </div>
+                    <div class="faq-card">
+                        <div class="faq-item">
+                            <h3>How accurate is edge detection?</h3>
+                            <p>It provides professional-quality edges suitable for product images and social media posts.</p>
+                        </div>
+                    </div>
+                </div>
+
+                
+            </div>
+        </div>
+    </section>
 
     <footer class="footer">
         <div class="container">
