--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                         <li><a href="/ai-cutout" class="nav-link">AI Cutout</a></li>
                         <li><a href="/turn-images-into-unicode" class="nav-link">Turn Images into Unicode</a></li>
                         <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
+                        <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
+                        <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
                     </ul>
                 </nav>
             </div>
@@ -103,6 +105,29 @@
                     </div>
                     <h3 class="card-title">Fb Covers</h3>
                     <p class="card-description">Images for FB cover pulled from Feishu Bitable and shown in a responsive gallery</p>
+                    <span class="card-cta">Get Started →</span>
+                </a>
+
+                <a href="/400x400-black-image" class="feature-card">
+                    <div class="card-icon">
+                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
+                            <rect x="3" y="3" width="18" height="18" rx="2" fill="#000000" stroke="currentColor" stroke-width="1.5"/>
+                        </svg>
+                    </div>
+                    <h3 class="card-title">400x400 Black Image</h3>
+                    <p class="card-description">Generate and download a 400×400 pure black image in PNG, JPG, or SVG formats</p>
+                    <span class="card-cta">Get Started →</span>
+                </a>
+
+                <a href="/blank-image" class="feature-card">
+                    <div class="card-icon">
+                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
+                            <rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="1.5"/>
+                            <path d="M7 9h10M7 12h10M7 15h10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                        </svg>
+                    </div>
+                    <h3 class="card-title">Blank Image</h3>
+                    <p class="card-description">Create printable blank pages with custom grids, lines, templates, units and DPI; export PNG/JPG/SVG</p>
                     <span class="card-cta">Get Started →</span>
                 </a>
             </div>
