--- a/layout-demo.html
+++ b/layout-demo.html
@@ -28,6 +28,8 @@
                 <nav class="nav">
                     <ul class="nav-menu">
                         <li><a href="index.html" class="nav-link">Home</a></li>
+                        <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
+                        <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
                         <li><a href="#grid" class="nav-link">Grid</a></li>
                         <li><a href="#flex" class="nav-link">Flex</a></li>
                         <li><a href="#cards" class="nav-link">Cards</a></li>
