--- a/turn-images-into-unicode.html
+++ b/turn-images-into-unicode.html
@@ -64,6 +64,10 @@
                         <li><a href="/image-describer" class="nav-link">Image Describer</a></li>
                         <li><a href="/ai-cutout" class="nav-link">AI Cutout</a></li>
                         <li><a href="/turn-images-into-unicode" class="nav-link active">Turn Images into Unicode</a></li>
+            <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
+            <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
+            <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
+            <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
                     </ul>
                 </nav>
             </div>
@@ -139,6 +143,61 @@
             </div>
         </div>
     </main>
+
+    <section class="faq">
+        <div class="container">
+            <h2>Unicode Converter FAQ</h2>
+            <div class="faq-intro">
+                <h1 class="tool-h1">Turn Images into Unicode Tool</h1>
+
+                <div class="content-grid">
+                    <div class="faq-card">
+                        <div class="copy-wrap">
+                            <div class="copy-col">
+                                <div class="copy-text">
+                                    <p>Our advanced <strong>Unicode converter</strong> turns images into text-based art using Unicode or ASCII characters. Ideal for terminals, social posts, creative coding, and lightweight image previews on platforms that favor text content.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="faq-card">
+                        <div class="feature-block">
+                            <h2>Why Choose This Unicode Converter?</h2>
+                            <ul>
+                                <li>Free, browser-based converter</li>
+                                <li>Accurate aspect ratio preservation</li>
+                                <li>Multiple character sets (standard, blocks, detailed)</li>
+                                <li>Copy and download plain text output</li>
+                                <li>Privacy-friendly processing</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="faq-card">
+                        <div class="faq-item">
+                            <h3>What is Unicode art?</h3>
+                            <p>Unicode art represents images using characters arranged in a grid to recreate shapes, shading, and composition.</p>
+                        </div>
+                    </div>
+                    <div class="faq-card">
+                        <div class="faq-item">
+                            <h3>Is the converter free?</h3>
+                            <p>Yes. This converter runs entirely in your browser and is free to use.</p>
+                        </div>
+                    </div>
+                    <div class="faq-card">
+                        <div class="faq-item">
+                            <h3>How do you keep aspect ratio?</h3>
+                            <p>We account for the monospace character width/height ratio during sampling to preserve the original image proportions.</p>
+                        </div>
+                    </div>
+                </div>
+
+                
+            </div>
+        </div>
+    </section>
 
     <footer class="footer">
         <div class="container">
