--- a/images-for-fb-cover.html
+++ b/images-for-fb-cover.html
@@ -34,9 +34,13 @@
         <button class="nav-toggle" aria-haspopup="true" aria-expanded="false" aria-controls="main-nav">Menu</button>
         <nav class="nav" id="main-nav" aria-label="Main navigation">
           <ul class="nav-menu">
+            <li><a href="/" class="nav-link">Home</a></li>
             <li><a href="/image-describer" class="nav-link">Image Describer</a></li>
             <li><a href="/ai-cutout" class="nav-link">AI Cutout</a></li>
             <li><a href="/turn-images-into-unicode" class="nav-link">Turn Images into Unicode</a></li>
+            <li><a href="/images-for-fb-cover" class="nav-link active">Fb Covers</a></li>
+            <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
+            <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
           </ul>
         </nav>
       </div>
